      - Updated: treated the situation when the country of the pickup point does not correspond to the customer's address
      - Updated: order administration realised using PrestaShop's native grid
      - Added: Product weight in grams, pounds and ounces is now supported. If the weight of the products is not
        in kilograms, the module converts the weight of the shipment to kilograms before exporting it.
      - Updated: module settings page realised using standard PrestaShop's Helper
      - Added: possibility to set print offset when preparing packet labels
      - Added: support for Packeta address validation widget in the cart
      - Added: validated address is saved to db and used in exports
      - Updated: pickup point update changed to carrier update, improving speed and reliability
      - Updated: carrier list in module administration realised using standard PrestaShop's controller.
      - Added: in the case of a multistore, the list of orders and export in the administration
        takes into account the selected shop or shop group
      - Updated: unification of data generation logic for shipment export (API + CSV)
      - Fixed: correct storage of chosen pickup point's currency
      - Added: possibility of using either ID or Reference as order ID in export
      - Updated: internal refactoring - removal of static classess Packeteryclass and PacketeryApi
      - Added: Packeta submenu added to main menu
      - Added: possibility to prepare carrier labels
      - Added: There is new possibility to post parcel via button in our packetery box in BO order detail
      - Updated: Widget HD library URL
      - Added: possibility to delete PDF labels via CRON and customize deletion results with GET params (file age/number of deleted files at once)
      - Added: ID verification request for adult products upon delivery
      - Added: Packetery/Core API layer