@@ -42,6 +42,8 @@ class Packetery extends CarrierModule
     // used only for mixing with carrier ids
     const ZPOINT = 'zpoint';
     const PP_ALL = 'pp_all';
+    const LOCAL = 'local';
+    const REMOTE = 'remote';
 
     protected $config_form = false;
 
@@ -720,34 +722,40 @@ class Packetery extends CarrierModule
      */
     public function hookDisplayHeader()
     {
-        $js = [
-            'front.js?v=' . $this->version,
+        $jsList = [
+            'front.js',
         ];
 
-        $iterator = new GlobIterator(
-            __DIR__ . '/views/js/checkout-modules/*.js',
-            FilesystemIterator::CURRENT_AS_FILEINFO
-        );
+        $iterator = new GlobIterator(__DIR__ . '/views/js/checkout-modules/*.js', FilesystemIterator::CURRENT_AS_FILEINFO);
         foreach ($iterator as $entry) {
-            $js[] = 'checkout-modules/' . $entry->getBasename() . '?v=' . $this->version;
+            $jsList[] = 'checkout-modules/' . $entry->getBasename();
+        }
+
+        $jsServer = self::LOCAL;
+        if (!Configuration::get('PS_JS_THEME_CACHE')) {
+            $jsServer = self::REMOTE;
+            $jsListFinal = [];
+            foreach ($jsList as $relativePath) {
+                $jsListFinal[] = $relativePath . '?v=' . $this->version;
+            }
+        } else {
+            $jsListFinal = $jsList;
         }
 
         $controllerWrapper = $this->diContainer->get(\Packetery\Tools\ControllerWrapper::class);
-        foreach ($js as $file) {
-//            $this->context->controller->addJS($this->_path . 'views/js/' . $file);
+        foreach ($jsListFinal as $file) {
             $uri = $this->_path . 'views/js/' . $file;
-            $controllerWrapper->registerJavascript(
-                sha1($uri),
-                $uri,
-                ['position' => 'bottom', 'priority' => 80, 'server' => 'remote']
-            );
+            $controllerWrapper->registerJavascript(sha1($uri), $uri, ['position' => 'bottom', 'priority' => 80, 'server' => $jsServer]);
         }
 
-        $controllerWrapper->registerStylesheet(
-            'packetery-front',
-            $this->_path . 'views/css/front.css?v=' . $this->version,
-            ['server' => 'remote']
-        );
+        $cssServer = self::LOCAL;
+        $cssPath = $this->_path . 'views/css/front.css';
+        if (!Configuration::get('PS_CSS_THEME_CACHE')) {
+            $cssPath .= '?v=' . $this->version;
+            $cssServer = self::REMOTE;
+        }
+
+        $controllerWrapper->registerStylesheet('packetery-front', $cssPath, ['server' => $cssServer, 'media' => 'all']);
     }
 
     /*ORDERS*/
