@@ -97,3 +97,4 @@
       - Added: possibility to delete PDF labels via CRON and customize deletion results with GET params (file age/number of deleted files at once)
       - Added: ID verification request for adult products upon delivery
       - Added: Packetery/Core API layer
+      - Updated: frontend JavaScript and CSS files registered in a way respecting CCC (Combine, Compress and Cache) setting
